--- a/style.css
+++ b/style.css
@@ -53,10 +53,18 @@
         padding: 40px;
         line-height: 30px;
     }
+    table{
+        width: 60%;
+        border:1px solid black;
+    }
+    tr:hover{
+        background-color: aquamarine;
+        color: red;
+    }
     footer{
         margin:0px 20%;
         background-color: #892143;
         color: #fff;
         text-align: center;
         padding:20px;
-    }
+    }   
